Docker - Postgres - ORM - Migration - dependency injection - JWT - Token
