# src/swagger.json
@@ -74,6 +74,70 @@
                     }
                 }
             }
+        },
+        "categories/import": {
+            "post": {
+                "tags": ["Category"],
+                "summary": "Upload a new categories",
+                "description":"Upload a new categories",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data":{
+                            "schema:": {
+                                "type": "object",
+                                "properties": {
+                                    "file": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses":{
+                    "201": {
+                        "description":"Created"
+                    }
+                }
+            }
+        },
+        "/specifications": {
+          "post":{
+            "tags": ["Specification"],
+            "summary": "Create a specification",
+            "description": "Create a new specification",
+            "requestBody": {
+                "content": {
+                    "application/json": {
+                          "schema":{
+                              "$ref": "#/definitions/Specification"                                                                                                                                      
+                        }
+                    }
+                }
+            },
+            "responses": {
+                "201": {
+                    "description": "Created"
+                },
+                "500": {
+                    "description": "Specification alreadys exists"
+                }
+                }
+            }
+          }  
+        },
+    "definitions": {
+      "Specification": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+        },
+          "description": {
+          "type": "string"
+                }
+            }
         }
     }
 }
